--- a/about.html
+++ b/about.html
@@ -10,6 +10,17 @@
   <link rel="stylesheet" href="css/index.css">
 
 </head>
+<header>
+    <nav>
+        <li><img class="logo" src="img/lambda-black.png" alt="Lambda School logo."></li>
+        <li><a href= "index.html">Home</a></li>
+        <li><a href= "about.html">About</a></li>
+        <li><a href= "#">Products</a></li>
+        <li><a href= "#">Blog</a></li>
+        <li><a href= "#">Contact</a></li>
+    </nav>
+    <span><img src="img/jumbo-about.png" alt="Image of city buildings at sunset."></span>
+</header>
 
 <body>
     <div class="container about-page">
