--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
 </head>
     <header>
         <nav>
-            <li><img class="logo" src="img/lambda-black.png" alt="Lambda School logo."></li>
-            <li><a href= "index.html">Home</a></li>
-            <li><a href= "about.html">About</a></li>
-            <li><a href= "#">Products</a></li>
-            <li><a href= "#">Blog</a></li>
-            <li><a href= "#">Contact</a></li>
+            <ul>
+                <img class="logo" src="img/lambda-black.png" alt="Lambda School logo.">
+                <li><a href= "index.html">Home</a></li>
+                <li><a href= "about.html">About</a></li>
+                <li><a href= "#">Products</a></li>
+                <li><a href= "#">Blog</a></li>
+                <li><a href= "#">Contact</a></li>
+            </ul>
         </nav>
-        <span><img src="img/jumbo.jpg" alt="Image of white and right lights."></span>
+        <div class="top-picture">
+            <img src="img/jumbo.jpg" alt="Image of white and right lights.">
+        </div>
     </header>
 
 <body>
